--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <!-- Fotos de Asistencia -->
                 <div class="photo-grid" id="attendancePhotos">
                     <div class="photo-upload-container" data-photo-id="1">
-                        <input type="file" id="photo1" class="photo-input" accept="image/*" capture="environment">
+                        <input type="file" id="photo1" class="photo-input" accept="image/*">
                         <div class="photo-placeholder">
                             <svg class="camera-icon" viewBox="0 0 24 24">
                                 <path d="M12 15.2A3.2 3.2 0 1 1 15.2 12 3.2 3.2 0 0 1 12 15.2zm0-4.8A1.6 1.6 0 1 0 13.6 12 1.6 1.6 0 0 0 12 10.4z"/>
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="photo-upload-container" data-photo-id="2">
-                        <input type="file" id="photo2" class="photo-input" accept="image/*" capture="environment">
+                        <input type="file" id="photo2" class="photo-input" accept="image/*">
                         <div class="photo-placeholder">
                             <svg class="camera-icon" viewBox="0 0 24 24">
                                 <path d="M12 15.2A3.2 3.2 0 1 1 15.2 12 3.2 3.2 0 0 1 12 15.2zm0-4.8A1.6 1.6 0 1 0 13.6 12 1.6 1.6 0 0 0 12 10.4z"/>
@@ -147,7 +147,7 @@
                     </div>
 
                     <div class="photo-upload-container" data-photo-id="3">
-                        <input type="file" id="photo3" class="photo-input" accept="image/*" capture="environment">
+                        <input type="file" id="photo3" class="photo-input" accept="image/*">
                         <div class="photo-placeholder">
                             <svg class="camera-icon" viewBox="0 0 24 24">
                                 <path d="M12 15.2A3.2 3.2 0 1 1 15.2 12 3.2 3.2 0 0 1 12 15.2zm0-4.8A1.6 1.6 0 1 0 13.6 12 1.6 1.6 0 0 0 12 10.4z"/>
@@ -168,7 +168,7 @@
                 <div class="ticket-section">
                     <h3 class="subsection-title">Ticket de Compra</h3>
                     <div class="photo-upload-container photo-upload-ticket" data-photo-id="ticket">
-                        <input type="file" id="photoTicket" class="photo-input" accept="image/*" capture="environment">
+                        <input type="file" id="photoTicket" class="photo-input" accept="image/*">
                         <div class="photo-placeholder">
                             <svg class="ticket-icon" viewBox="0 0 24 24">
                                 <path d="M20 12v-1.707c0-.4-.159-.784-.44-1.06l-1.06-1.06a3 3 0 1 1 0-4.243l1.06-1.06c.281-.281.44-.66.44-1.06V2a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v.793c0 .4.159.784.44 1.06l1.06 1.06a3 3 0 0 1 0 4.243l-1.06 1.06c-.281.281-.44.66-.44 1.06V12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM14 6h-4v2h4V6zm0 4h-4v2h4v-2z"/>
@@ -238,10 +238,6 @@
     <!-- Scripts -->
     <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/photo-handler.js"></script>
-    <script src="js/location-handler.js"></script>
-    <script src="js/form-validator.js"></script>
-    <script src="js/api-client.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
