fix: Ticket opcional y eliminacion de hardcoding

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                 <!-- Foto del Ticket -->
                 <div class="ticket-section">
-                    <h3 class="subsection-title">Ticket de Compra</h3>
+                    <h3 class="subsection-title">Ticket</h3>
                     <div class="photo-upload-container photo-upload-ticket" data-photo-id="ticket">
                         <div class="photo-placeholder">
                             <svg class="ticket-icon" viewBox="0 0 24 24">
