--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Header -->
         <header class="header">
             <div class="logo-container">
-                <img src="assets/images/logo.svg" alt="Logo" class="logo" id="companyLogo">
+                <img src="logo/assistlogo.svg" alt="Logo" class="logo" id="companyLogo">
             </div>
             <h1 class="title">Control de Asistencias</h1>
             <p class="subtitle">Complete el formulario para registrar su asistencia</p>
