--- a/dashboard/admin/login.html
+++ b/dashboard/admin/login.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#667eea">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../../assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="logo/assistlogo.svg">
     
     <!-- Título -->
     <title>Admin Login | AssistByDataTraack</title>
@@ -38,12 +38,12 @@
                 <img src="../../assets/images/logo.svg" alt="Logo" class="logo" id="companyLogo">
             </div>
             <h1 class="login-title">Admin Panel</h1>
-            <p class="login-subtitle">AssistByDataTraack</p>
+            <p class="login-subtitle">Powered By DataTraack</p>
             <div class="admin-badge">
                 <svg viewBox="0 0 24 24" width="16" height="16">
                     <path fill="currentColor" d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/>
                 </svg>
-                Administrador
+                Admin
             </div>
         </header>
 
@@ -55,12 +55,12 @@
                     <svg class="label-icon" viewBox="0 0 24 24" width="16" height="16">
                         <path fill="currentColor" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                     </svg>
-                    Correo Electrónico
+                    Email
                 </label>
                 <input 
                     type="email" 
                     id="email" 
-                    name="email" 
+                    name="email"
                     class="form-input"
                     required
                     autocomplete="email"
@@ -76,7 +76,7 @@
                     <svg class="label-icon" viewBox="0 0 24 24" width="16" height="16">
                         <path fill="currentColor" d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/>
                     </svg>
-                    Contraseña
+                    Password
                 </label>
                 <div class="password-input-wrapper">
                     <input 
@@ -105,14 +105,14 @@
                 <label class="checkbox-label">
                     <input type="checkbox" id="rememberMe" name="rememberMe">
                     <span class="checkbox-custom"></span>
-                    <span>Recordar sesión</span>
+                    <span>Remember me</span>
                 </label>
-                <a href="#" class="forgot-password" id="forgotPassword">¿Olvidaste tu contraseña?</a>
+                <a href="#" class="forgot-password" id="forgotPassword">Forgot your password?</a>
             </div>
 
             <!-- Botón de Login -->
             <button type="submit" class="btn btn-primary" id="loginBtn">
-                <span class="btn-text">Iniciar Sesión</span>
+                <span class="btn-text">Sign In</span>
                 <span class="btn-loader"></span>
             </button>
 
@@ -126,7 +126,7 @@
                 <svg viewBox="0 0 24 24" width="16" height="16">
                     <path fill="currentColor" d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"/>
                 </svg>
-                Volver al formulario de asistencias
+                Back to the attendance form
             </a>
         </form>
 
@@ -136,8 +136,8 @@
                 <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
             </svg>
             <div class="alert-content">
-                <strong>¡Éxito!</strong>
-                <p id="successMessageText">Iniciando sesión...</p>
+                <strong>Success!</strong>
+                <p id="successMessageText">Signing in…</p>
             </div>
         </div>
 
@@ -147,14 +147,14 @@
             </svg>
             <div class="alert-content">
                 <strong>Error</strong>
-                <p id="errorMessageText">Credenciales inválidas</p>
+                <p id="errorMessageText">Invalid credentials</p>
             </div>
         </div>
 
         <!-- Footer -->
         <footer class="login-footer">
-            <p>&copy; 2024 AssistByDataTraack. Todos los derechos reservados.</p>
-            <p class="version">Admin Panel v1.0</p>
+            <p>&copy; 2023 AssistByDataTraack. All rights reserved.</p>
+            <p class="version">Admin Panel</p>
         </footer>
     </div>
 
